--- a/index.html
+++ b/index.html
@@ -24,5 +24,44 @@
     <link rel="stylesheet" href="style.css" />
     <title>Vision Luxury Villas | True Relaxation</title>
   </head>
-  <body></body>
+  <body class="container">
+    <!-- Header Section-->
+    <header id="header">Header</header>
+
+    <!-- Booking Content Section -->
+    <section id="booking-content">Booking Content</section>
+
+    <!-- Booking Date Section -->
+    <section id="booking-date">Booking Date</section>
+
+    <!-- Villas Section -->
+    <section id="villas">Villas</section>
+
+    <!-- Motto Section -->
+    <section id="motto">Motto</section>
+
+    <!-- Events Content Section -->
+    <section id="events-content">Events Content</section>
+
+    <!-- Events Text Section -->
+    <section id="events-text">Events Text</section>
+
+    <!-- Gallery Text Section -->
+    <section id="gallery-text">Gallery Text</section>
+
+    <!-- Gallery Carousel Section -->
+    <section id="gallery-carousel">Gallery Carousel</section>
+
+    <!-- Events Content Section -->
+    <section id="features-content">Features Content</section>
+
+    <!-- Features Text Section -->
+    <section id="features-text">Features Text</section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials">Testimonials</section>
+
+    <!-- Footer Section -->
+    <footer id="footer">Footer</footer>
+  </body>
 </html>
