--- a/index.html
+++ b/index.html
@@ -44,6 +44,26 @@
           </div>
         </div>
       </nav>
+
+      <!-- Logo and Content Container-->
+      <div class="header__logo__content">
+        <!-- Logo -->
+        <a href="#" class="header__logo__content--logo">
+          <span>V</span>L<span>V</span>
+        </a>
+
+        <!-- Content-->
+        <div class="header__logo__content--content">
+          <h1 class="header__logo__content--content__title">Relax Your Soul</h1>
+          <p class="header__logo__content--content__para">
+            The team of VLV welcomes you. Start relaxing your soul and enjoy
+            your stay.
+          </p>
+          <a href="#" class="header__logo__content--content__link">
+            Discover More</a
+          >
+        </div>
+      </div>
     </header>
 
     <!-- Booking Content Section -->
