--- a/index.html
+++ b/index.html
@@ -67,7 +67,27 @@
     </header>
 
     <!-- Booking Content Section -->
-    <section id="booking-content">Booking Content</section>
+    <section id="booking-content">
+      <h2 class="booking-content__title">Discover Serenity</h2>
+      <p class="booking-content__para">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias
+        ipsum aperiam ipsa aliquam temporibus accusamus quos et recusandae,
+        repudiandae similique. Commodi fugiat sit ex. Molestias temporibus
+        laudantium maxime quas qui?
+      </p>
+
+      <!-- Icons-->
+      <div class="booking-content__icons">
+        <div class="booking-content__icons--weather">
+          <i class="far fa-sun"></i>
+          <p>24<sup>&#8451;</sup></p>
+        </div>
+        <div class="booking-content__icons--time">
+          <i class="far fa-clock"></i>
+          <p>05:00 PM</p>
+        </div>
+      </div>
+    </section>
 
     <!-- Booking Date Section -->
     <section id="booking-date">Booking Date</section>
