--- a/index.html
+++ b/index.html
@@ -90,7 +90,45 @@
     </section>
 
     <!-- Booking Date Section -->
-    <section id="booking-date">Booking Date</section>
+    <section id="booking-date">
+      <!-- Scheduke -->
+      <div class="booking-date__schedule">
+        <div class="booking-date__schedule--arrival">
+          <h5>Arrival</h5>
+          <div>
+            <p>May</p>
+            <p>09</p>
+            <p>&#65088;</p>
+          </div>
+        </div>
+
+        <div class="booking-date__schedule--departure">
+          <h5>Departure</h5>
+          <div>
+            <p>May</p>
+            <p>23</p>
+            <p>&#65088;</p>
+          </div>
+        </div>
+
+        <div class="booking-date__schedule--guests">
+          <h5>Guests</h5>
+          <div>
+            <p>&#65087;</p>
+            <p>1</p>
+            <p>&#65088;</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Contact -->
+      <div class="booking-date__contact">
+        <a href="#" class="booking-date__contact--link">Make a Reservation</a>
+        <p>Reservation Hotline</p>
+        <p>+1-5263-8965-6567</p>
+        <p>Reservation Assistance Available 24 Hours</p>
+      </div>
+    </section>
 
     <!-- Villas Section -->
     <section id="villas">Villas</section>
