--- a/index.html
+++ b/index.html
@@ -131,7 +131,73 @@
     </section>
 
     <!-- Villas Section -->
-    <section id="villas">Villas</section>
+    <section id="villas">
+      <div class="villas__villa-1">
+        <h2 class="villas__villa-1--title">Standard Villa</h2>
+        <p class="villas__villa-1--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          quidem aspernatur nam eum nisi unde, cupiditate id explicabo dolorum
+          quae quam? Consequatur delectus praesentium alias iste odio beatae
+          blanditiis laboriosam?
+        </p>
+        <a href="#" class="villas__villa-1--link">Starting at $200.00</a>
+      </div>
+
+      <div class="villas__villa-2">
+        <h2 class="villas__villa-2--title">Superior Villa</h2>
+        <p class="villas__villa-2--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          quidem aspernatur nam eum nisi unde, cupiditate id explicabo dolorum
+          quae quam? Consequatur delectus praesentium alias iste odio beatae
+          blanditiis laboriosam?
+        </p>
+        <a href="#" class="villas__villa-2--link">Starting at $300.00</a>
+      </div>
+
+      <div class="villas__villa-3">
+        <h2 class="villas__villa-3--title">Infinity Villa</h2>
+        <p class="villas__villa-3--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          quidem aspernatur nam eum nisi unde, cupiditate id explicabo dolorum
+          quae quam? Consequatur delectus praesentium alias iste odio beatae
+          blanditiis laboriosam?
+        </p>
+        <a href="#" class="villas__villa-3--link">Starting at $400.00</a>
+      </div>
+
+      <div class="villas__villa-4">
+        <h2 class="villas__villa-4--title">Ultra Villa</h2>
+        <p class="villas__villa-4--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          quidem aspernatur nam eum nisi unde, cupiditate id explicabo dolorum
+          quae quam? Consequatur delectus praesentium alias iste odio beatae
+          blanditiis laboriosam?
+        </p>
+        <a href="#" class="villas__villa-4--link">Starting at $1100.00</a>
+      </div>
+
+      <div class="villas__villa-5">
+        <h2 class="villas__villa-5--title">Galactic Villa</h2>
+        <p class="villas__villa-5--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          quidem aspernatur nam eum nisi unde, cupiditate id explicabo dolorum
+          quae quam? Consequatur delectus praesentium alias iste odio beatae
+          blanditiis laboriosam?
+        </p>
+        <a href="#" class="villas__villa-5--link">Starting at $1300.00</a>
+      </div>
+
+      <div class="villas__villa-6">
+        <h2 class="villas__villa-6--title">Cosmic Villa</h2>
+        <p class="villas__villa-6--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          quidem aspernatur nam eum nisi unde, cupiditate id explicabo dolorum
+          quae quam? Consequatur delectus praesentium alias iste odio beatae
+          blanditiis laboriosam?
+        </p>
+        <a href="#" class="villas__villa-6--link">Starting at $1500.00</a>
+      </div>
+    </section>
 
     <!-- Motto Section -->
     <section id="motto">Motto</section>
