--- a/index.html
+++ b/index.html
@@ -200,7 +200,17 @@
     </section>
 
     <!-- Motto Section -->
-    <section id="motto">Motto</section>
+    <section id="motto">
+      <div class="motto__content">
+        <h2 class="motto__content--title">We Reimagined Luxury</h2>
+        <p class="motto__content--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+          saepe dolorum eum dolores quam aperiam, tenetur impedit, ad veniam
+          laboriosam placeat quos perferendis distinctio ipsam, doloremque vel
+          quia est repudiandae.
+        </p>
+      </div>
+    </section>
 
     <!-- Events Content Section -->
     <section id="events-content">Events Content</section>
