The Events Content

--- a/index.html
+++ b/index.html
@@ -213,7 +213,27 @@
     </section>
 
     <!-- Events Content Section -->
-    <section id="events-content">Events Content</section>
+    <section id="events-content">
+      <div class="events-content__event-1">
+        <h2 class="events-content__event-1--title">Beach Party</h2>
+        <p class="events-content__event-1--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, quas.
+          Nulla quam temporibus, commodi possimus quia officiis mollitia atque
+          magni aliquam, corporis adipisci saepe illum, ab qui aliquid facilis?
+          Inventore.
+        </p>
+      </div>
+
+      <div class="events-content__event-2">
+        <h2 class="events-content__event-2--title">Culture Discovery</h2>
+        <p class="events-content__event-2--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, quas.
+          Nulla quam temporibus, commodi possimus quia officiis mollitia atque
+          magni aliquam, corporis adipisci saepe illum, ab qui aliquid facilis?
+          Inventore.
+        </p>
+      </div>
+    </section>
 
     <!-- Events Text Section -->
     <section id="events-text">Events Text</section>
