--- a/index.html
+++ b/index.html
@@ -236,7 +236,11 @@
     </section>
 
     <!-- Events Text Section -->
-    <section id="events-text">Events Text</section>
+    <section id="events-text">
+      <div class="events-text__content">
+        <h2 class="events-text__content--title">Events</h2>
+      </div>
+    </section>
 
     <!-- Gallery Text Section -->
     <section id="gallery-text">Gallery Text</section>
