The Gallery Text

--- a/index.html
+++ b/index.html
@@ -243,7 +243,11 @@
     </section>
 
     <!-- Gallery Text Section -->
-    <section id="gallery-text">Gallery Text</section>
+    <section id="gallery-text">
+      <div class="gallery-text__content">
+        <h2 class="gallery-text__content--title">Gallery</h2>
+      </div>
+    </section>
 
     <!-- Gallery Carousel Section -->
     <section id="gallery-carousel">Gallery Carousel</section>
