--- a/index.html
+++ b/index.html
@@ -250,7 +250,67 @@
     </section>
 
     <!-- Gallery Carousel Section -->
-    <section id="gallery-carousel">Gallery Carousel</section>
+    <section id="gallery-carousel">
+      <!-- Button Left -->
+      <button class="gallery-carousel__btn gallery-carousel__btn--left">
+        <i class="fas fa-caret-left"></i>
+      </button>
+
+      <!-- Carousel Slides -->
+      <div class="gallery-carousel__img-container">
+        <ul class="gallery-carousel__img-container--list">
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-1.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-2.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-3.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-4.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-5.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-6.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-7.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-8.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-9.jpg" alt="villa" />
+          </li>
+          <li class="gallery-carousel__img-container--list__item">
+            <img src="img/Gallery/gallery-10.jpg" alt="villa" />
+          </li>
+        </ul>
+      </div>
+
+      <!-- Button Right -->
+      <button class="gallery-carousel__btn gallery-carousel__btn--right">
+        <i class="fas fa-caret-right"></i>
+      </button>
+
+      <!-- Carousel Nav -->
+      <div class="gallery-carousel__nav">
+        <button class="gallery-carousel__nav--btn current-img"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+        <button class="gallery-carousel__nav--btn"></button>
+      </div>
+    </section>
 
     <!-- Events Content Section -->
     <section id="features-content">Features Content</section>
