--- a/index.html
+++ b/index.html
@@ -252,14 +252,14 @@
     <!-- Gallery Carousel Section -->
     <section id="gallery-carousel">
       <!-- Button Left -->
-      <button class="gallery-carousel__btn gallery-carousel__btn--left">
+      <button class="gallery-carousel__btn gallery-carousel__btn--left hidden">
         <i class="fas fa-caret-left"></i>
       </button>
 
       <!-- Carousel Slides -->
       <div class="gallery-carousel__img-container">
         <ul class="gallery-carousel__img-container--list">
-          <li class="gallery-carousel__img-container--list__item">
+          <li class="gallery-carousel__img-container--list__item current-img">
             <img src="img/Gallery/gallery-1.jpg" alt="villa" />
           </li>
           <li class="gallery-carousel__img-container--list__item">
@@ -323,5 +323,8 @@
 
     <!-- Footer Section -->
     <footer id="footer">Footer</footer>
+
+    <!-- JavaScript File -->
+    <script src="app.js"></script>
   </body>
 </html>
