The Features Content and Text

--- a/index.html
+++ b/index.html
@@ -313,10 +313,34 @@
     </section>
 
     <!-- Events Content Section -->
-    <section id="features-content">Features Content</section>
+    <section id="features-content">
+      <div class="features-content__feature-1">
+        <h2 class="features-content__feature-1--title">Cocktail Package</h2>
+        <p class="features-content__feature-1--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+          doloribus in alias ex adipisci, at iusto. Quibusdam alias laudantium
+          illum deserunt sint, cupiditate culpa est tempore aliquid quaerat
+          atque odit!
+        </p>
+      </div>
+
+      <div class="features-content__feature-2">
+        <h2 class="features-content__feature-2--title">Surfing Package</h2>
+        <p class="features-content__feature-2--para">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias
+          doloribus in alias ex adipisci, at iusto. Quibusdam alias laudantium
+          illum deserunt sint, cupiditate culpa est tempore aliquid quaerat
+          atque odit!
+        </p>
+      </div>
+    </section>
 
     <!-- Features Text Section -->
-    <section id="features-text">Features Text</section>
+    <section id="features-text">
+      <div class="features-text__content">
+        <h2 class="features-text__content--title">Features</h2>
+      </div>
+    </section>
 
     <!-- Testimonials Section -->
     <section id="testimonials">Testimonials</section>
