--- a/index.html
+++ b/index.html
@@ -343,7 +343,79 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section id="testimonials">Testimonials</section>
+    <section id="testimonials">
+      <div class="testimonials__card">
+        <div class="testimonials__card--front">
+          <h2>Clark Lois</h2>
+        </div>
+        <div class="testimonials__card--back">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+            quibusdam?
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonials__card">
+        <div class="testimonials__card--front">
+          <h2>Tonny Stark</h2>
+        </div>
+        <div class="testimonials__card--back">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+            quibusdam?
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonials__card">
+        <div class="testimonials__card--front">
+          <h2>Hope Pym</h2>
+        </div>
+        <div class="testimonials__card--back">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+            quibusdam?
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonials__card">
+        <div class="testimonials__card--front">
+          <h2>Amanda Waller</h2>
+        </div>
+        <div class="testimonials__card--back">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+            quibusdam?
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonials__card">
+        <div class="testimonials__card--front">
+          <h2>Steve Rogesr</h2>
+        </div>
+        <div class="testimonials__card--back">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+            quibusdam?
+          </p>
+        </div>
+      </div>
+
+      <div class="testimonials__card">
+        <div class="testimonials__card--front">
+          <h2>Black Widow</h2>
+        </div>
+        <div class="testimonials__card--back">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+            quibusdam?
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer Section -->
     <footer id="footer">Footer</footer>
