--- a/index.html
+++ b/index.html
@@ -418,7 +418,23 @@
     </section>
 
     <!-- Footer Section -->
-    <footer id="footer">Footer</footer>
+    <footer id="footer">
+      <p>All Right Reserved. &copy; VLV</p>
+      <div class="footer__social">
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#" class="footer__social--link">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </footer>
 
     <!-- JavaScript File -->
     <script src="app.js"></script>
